; ModuleID = '/home/carl/AnghaBench/zstd/lib/legacy/extr_zstd_v06.c_ZSTDv06_copyDCtx.c'
source_filename = "/home/carl/AnghaBench/zstd/lib/legacy/extr_zstd_v06.c_ZSTDv06_copyDCtx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ZSTDv06_BLOCKSIZE_MAX = common dso_local global i64 0, align 8
@WILDCOPY_OVERLENGTH = common dso_local global i64 0, align 8
@ZSTDv06_frameHeaderSize_max = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ZSTDv06_copyDCtx(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = load i64, i64* @ZSTDv06_BLOCKSIZE_MAX, align 8
  %8 = load i64, i64* @WILDCOPY_OVERLENGTH, align 8
  %9 = add nsw i64 %7, %8
  %10 = load i64, i64* @ZSTDv06_frameHeaderSize_max, align 8
  %11 = add nsw i64 %9, %10
  %12 = sub i64 4, %11
  %13 = call i32 @memcpy(i32* %5, i32* %6, i64 %12)
  ret void
}

declare dso_local i32 @memcpy(i32*, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
